--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     <div class="conversation" id="conversation"></div>
     <div class="input-container">
       <input type="text" class="input-field" id="input1" placeholder="Enter input 1">
-      <button class="input-button" onclick="sendInput(1, '/api/first_string')">Send Input 1</button>
+      <button class="input-button" onclick="sendInput(1, '/api/first_string')">Feature comming soon</button>
     </div>
     <div class="input-container">
       <input type="text" class="input-field" id="input2" placeholder="Enter input 2">
-      <button class="input-button" onclick="sendInput(2, '/api/second_string')">Send Input 2</button>
+      <button class="input-button" onclick="sendInput(2, '/api/second_string')">Ask Bot</button>
     </div>
   </div>
 
@@ -87,7 +87,7 @@
       }
 
       // Send the input to the server (replace <server_url> with your server URL)
-      fetch('https://b4b3-34-74-188-51.ngrok-free.app' + route, {
+      fetch('http://3355-34-91-155-87.ngrok-free.app' + route, {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
